# pySPM

./: .gitignore  .travis.yml  Block.py  Bruker.py  GUI.py  INSTALL  ITA.py  ITAslicer.py  ITM.py  LICENSE  PCA.py  README  README.md  SPM.py  ToF.py  __init__.py  align.py  collection.py  description.rst  elements.db  nanoscan.py  pyproject.toml  requirements.txt  setup.py  slicer.py  slicer.ui  units.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
data/: bruker_data_header.000  bruker_data_header.002  bruker_data_header.003
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  pySPM Documentation.ipynb  pySPM+Documentation.ipynb  pySPM.rst  pySPM.utils.rst  tutorial.rst  tutorial_AFM.rst
pySPM/: Block.py  Bruker.py  GUI.py  ITA.py  ITAX.py  ITAslicer.py  ITM.py  ITS.py  PCA.py  SPM.py  SXM.py  ToF.py  __init__.py  __main__.py  _version.py  align.py  collection.py  mplwidget.py  nanoscan.py  slicer.py  units.py  utils.py
pySPM/data/: elements.db  test.sxm
pySPM/tools/: emission_current_plotter.py  fpanel.py  mplwidget.py  spectra.py  spectraviewer.py  spectraviewer.ui  stability.py  timer_display.py  timer_display.ui  tof_timer.py  values_display.py  win32_helper.py
pySPM/utils/: __init__.py  colors.py  constants.py  elts.py  fit.py  geometry.py  haar.py  math.py  misc.py  plot.py  progressbar.py  restoration.py  save.py  spectra.py  units.py
tests/: testBrukerData.py  test_Bruker.py  test_ITA.py  test_PCA.py  test_elts.py  test_modules.py
tests/data/: bruker_data_header.001
tools/StabilityPlotter/: stability.py
tools/SurfaceLab_helper/: emission_current_plotter.py  fpanel.py  timer_display.ui  tof_timer.py  win32_helper.py
