[tool.poetry]
name = "pyspm"
version = "0.5.2"
description = "Library to handle SPM and ToF-SIMS data"
authors = ["Olivier Scholder <o.scholder@gmail.com>"]
maintainers = ["Dinesh Pinto <annual.fallout_0z@icloud.com>"]
homepage = "https://github.com/scholi/pySPM"
repository = "https://github.com/scholi/pySPM"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://nbviewer.org/github/scholi/pySPM/blob/master/doc/pySPM%20Documentation.ipynb"
keywords = ["ToF", "SIMS", "ION-ToF", "SPM", "SFM", "SXM", "AFM", "KPFM", "PCA", "ITA", "imaging", "ITM", "Bruker", "Nanonis"]
packages = [{ include = "pySPM" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.2.2"
scikit-image = ">=0.21.0"
numpy = "^1.26.0"
matplotlib = "^3.7.1"
seaborn = "^0.13.0"
psutil = "^5.9.4"
tqdm = "^4.65.0"
ipython = "^8.16.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ruff-lsp = "^0.0.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]
ignore = [
    "N806", # variable in function should be lowercase
    "N802", # function name should be lowercase
    "N801", # class name should use CapWords convention
    "ERA001", # eradicate: Found commented out code
    "N803", # argument name should be lowercase
    "E741", # ambiguous variable name
    "E722", # do not use bare except
    "RUF001",
    "RUF003",
    "N999",
    "F405",
    "F403",
    "SIM115",
]